<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/buttonCheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="returnReplyCheese"
        android:text="@string/cheese"
        app:layout_constraintEnd_toStartOf="@+id/buttonBlueberry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonBlueberry" />

    <Button
        android:id="@+id/buttonBlueberry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:onClick="returnReplyBlueberry"
        android:text="@string/blueberry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonChocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="returnReplyChocolate"
        android:text="@string/chocolate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/buttonBlueberry"
        app:layout_constraintTop_toTopOf="@+id/buttonBlueberry" />

    <Button
        android:id="@+id/buttonWhiteForest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:onClick="returnReplyWhiteForest"
        android:text="@string/whiteForest"
        app:layout_constraintEnd_toStartOf="@+id/buttonButterscotch"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonButterscotch" />

    <Button
        android:id="@+id/buttonButterscotch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="returnReplyButterscotch"
        android:text="@string/butterscotch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBlueberry" />

    <Button
        android:id="@+id/buttonPineapple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:onClick="returnReplyPineapple"
        android:text="@string/pineapple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonButterscotch"
        app:layout_constraintHorizontal_bias="0.986"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442" />

</androidx.constraintlayout.widget.ConstraintLayout>